# cpp_duplicate_struct

./: .gitignore  CMakeLists.txt  main.cpp
guest_msg/: CMakeLists.txt  guest_api.h  guest_msg_mgr.cpp  guest_msg_mgr.h
user_msg/: CMakeLists.txt  user_msg_api.h  user_msg_mgr.cpp  user_msg_mgr.h
